Bug 1570402 - [RTL] Fix overlapping icon on text on the screen sharing popup prompt r=johannh a=RyanVM
Differential Revision: https://phabricator.services.mozilla.com/D40825

--- a/browser/themes/shared/notification-icons.inc.css
+++ b/browser/themes/shared/notification-icons.inc.css
@@ -207,6 +207,10 @@ html|*#webRTC-previewVideo {
   border-top: 1px solid var(--panel-separator-color);
 }
 
+#webRTC-previewWarning:-moz-locale-dir(rtl) {
+  background-position: calc(100% - .75em) .75em;
+}
+
 #webRTC-previewWarning > .text-link {
   margin-inline-start: 0;
 }
